@@ -1,3 +1,7 @@
+2008-10-29  Stephen J. Turnbull  <stephen@xemacs.org>
+
+	* bytecomp.el (byte-compile-file): Protect encoding from latin-unity.
+
 2008-10-28  Stephen J. Turnbull  <stephen@xemacs.org>
 
 	* version.el (xemacs-betaname): Fix docstring typo.  (Thanks, Ville!)
